[gd_scene load_steps=2 format=3 uid="uid://oopn1kyoblx5"]

[ext_resource type="Script" path="res://Views/Hud.gd" id="1_8n84g"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_8n84g")

[node name="PauseMenu" type="Node2D" parent="."]

[node name="RestartButton" type="Button" parent="PauseMenu"]
offset_left = 523.0
offset_top = 328.0
offset_right = 709.0
offset_bottom = 372.0
text = "Retry"

[node name="QuitButton" type="Button" parent="PauseMenu"]
offset_left = 523.0
offset_top = 397.0
offset_right = 709.0
offset_bottom = 441.0
text = "Quit"

[node name="MuteButton" type="Button" parent="PauseMenu"]
offset_left = 1096.0
offset_top = 13.0
offset_right = 1270.0
offset_bottom = 56.0
text = "Sound: On"

[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/MuteButton" to="." method="_on_mute_button_pressed"]
